# cr8r

./: Cargo.toml  README.md  client.yaml  controller.yaml  runner.yaml  test  todo
apps/client/: Cargo.toml
apps/client/src/: app.rs  commands.rs  config.rs  controller.rs  core.rs  definition.rs  error.rs  experiment.rs  main.rs  modules.rs  system.rs  ui.rs  widgets.rs
apps/client/src/app/: commands.rs  context.rs
apps/client/src/commands/: controller.rs  experiment.rs
apps/client/src/controller/: commands.rs
apps/client/src/core/: config.rs  error.rs
apps/client/src/definition/: arg.rs
apps/client/src/experiment/: commands.rs
apps/client/src/modules/: app.rs  attachment.rs  definition.rs  experiment.rs  job.rs  report.rs
apps/client/src/system/: config.rs  connector.rs
apps/client/src/ui/: core.rs  date.rs  error.rs  experiment.rs  experiment_report.rs  experiment_step.rs  progress.rs  report.rs  runner.rs  runners.rs
apps/client/src/widgets/: app.rs  experiment.rs  job.rs  report.rs  runner.rs
apps/controller/: Cargo.toml
apps/controller/src/: backend.rs  config.rs  core.rs  frontend.rs  interface.rs  main.rs  rpc.rs  system.rs
apps/controller/src/backend/: compiler.rs  error.rs  experiment.rs  experiment_watcher.rs  runner.rs  system.rs
apps/controller/src/config/: controller.rs
apps/controller/src/core/: config.rs  error.rs
apps/controller/src/frontend/: authorizer.rs  middlewares.rs  routes.rs  service.rs  services.rs  state.rs
apps/controller/src/rpc/: config.rs  interceptors.rs  service.rs  services.rs
apps/controller/src/system/: assignments.rs  attachment.rs  attachment_store.rs  attachments.rs  compiler.rs  config.rs  ecosystem.rs  error.rs  event.rs  event_bus.rs  experiment.rs  experiment_session.rs  experiment_store.rs  experiments.rs  modules.rs  runner.rs  runner_session.rs  runner_store.rs  runners.rs  system.rs
apps/runner/: Cargo.toml
apps/runner/src/: backend.rs  cargo.rs  config.rs  core.rs  error.rs  experiment.rs  main.rs  rpc.rs  runner.rs  session.rs  system.rs
apps/runner/src/backend/: executor.rs  experiment_executor.rs  experiment_journalist.rs  experiment_reporter.rs  heartbeat.rs  journalist.rs  runner.rs  system_heartbeat.rs  system_heartbeater.rs
apps/runner/src/cargo/: manifest.rs
apps/runner/src/core/: client.rs  clients.rs  config.rs  error.rs  session.rs
apps/runner/src/experiment/: executor.rs  logger.rs
apps/runner/src/rpc/: config.rs  controller_session.rs  session.rs
apps/runner/src/runner/: actor.rs  socket.rs  state.rs
apps/runner/src/system/: attachment.rs  attachment_store.rs  conduct_assignment.rs  config.rs  dispatcher.rs  executor.rs  get_assignment.rs  logger.rs  modules.rs
libs/interop/: Cargo.toml  build.rs
libs/interop/protobuf/: controller.proto  core.proto  for_client.proto  for_runner.proto  models.proto  services.proto
libs/interop/protobuf/controller/: howdy.proto
libs/interop/protobuf/core/: assignment.proto  attachment.proto  definition.proto  event.proto  experiment.proto  experiment_def.proto  experiment_event.proto  experiment_report.proto  experiment_step.proto  job.proto  program.proto  report.proto  runner.proto
libs/interop/protobuf/for_runner/: hello.proto  register.proto
libs/interop/protobuf/models/: attachment.proto  definition.proto  event.proto  experiment.proto  job.proto  report.proto  runner.proto
libs/interop/protobuf/services/: assignments.proto  attachments.proto  controller.proto  events.proto  experiments.proto  jobs.proto  reports.proto  runners.proto
libs/interop/src/: _client.rs  client.rs  clients.rs  connection.rs  contract.rs  domain.rs  error.rs  lib.rs  models.rs  proto.rs  protocol.rs
libs/interop/src/client/: assignment.rs  attachment.rs  event.rs  experiment.rs  report.rs  runner.rs
libs/interop/src/clients/: assignment.rs  attachment.rs  controller.rs  event.rs  experiment.rs  job.rs  report.rs  runner.rs
libs/interop/src/contract/: assignment.rs  event.rs  experiment.rs  job.rs  macros.rs  program.rs  report.rs  runner.rs
libs/interop/src/domain/: assignment.rs  attachment.rs  definition.rs  error.rs  event.rs  experiment.rs  job.rs  macros.rs  report.rs  runner.rs
libs/interop/src/models/: attachment.rs  definition.rs  error.rs  event.rs  experiment.rs  job.rs  macros.rs  report.rs  runner.rs
libs/lxd/: Cargo.toml  README.md
libs/lxd/src/: client.rs  cmds.rs  commands.rs  connector.rs  error.rs  event.rs  lib.rs  listener.rs  models.rs  response.rs
libs/lxd/src/cmds/: autodetect.rs  config.rs  delete.rs  exec.rs  file_pull.rs  file_push.rs  invoke.rs  launch.rs  list.rs
libs/lxd/src/commands/: autodetect.rs  config.rs  delete.rs  exec.rs  file.rs  file_pull.rs  file_push.rs  invoke.rs  launch.rs  list.rs
libs/lxd/src/models/: container_config.rs  container_name.rs  device_def.rs  device_name.rs  ident.rs  image_name.rs
libs/lxd/tests/: 00_smoke.rs  exec.rs  files.rs  integration.rs  list.rs  utils.rs
libs/protocol/: Cargo.toml  build.rs
libs/protocol/client/: Cargo.toml
libs/protocol/core/: Cargo.toml
libs/protocol/core/src/: lib.rs  models.rs
libs/protocol/protobuf/src/: client.proto  core.proto  for_client.proto  for_runner.proto  runner.proto
libs/protocol/protos/src/: controller.proto  core.proto  runner.proto
libs/protocol/runner/: Cargo.toml
libs/protocol/runner/src/: lib.rs  messages.rs
libs/protocol/src/: lib.rs
libs/sandbox/: Cargo.toml
libs/sandbox/src/: commands.rs  config.rs  def.rs  engine.rs  engines.rs  error.rs  lib.rs  listener.rs  mount.rs  provider.rs
libs/sandbox/src/commands/: add_env.rs  add_mount.rs  env.rs  exec.rs  initialize.rs  invoke.rs  mount.rs
libs/sandbox/src/commands__todo_remove/: destroy.rs  env.rs  initialize.rs  invoke.rs  mount.rs
libs/sandbox/src/engines/: lxd.rs  shell.rs
src/app_client/: Cargo.toml
src/app_client/src/: cli.rs  error.rs  main.rs
src/lib_protocol/: Cargo.toml
src/lib_protocol/src/: lib.rs  models.rs  targets.rs  version.rs
src/runner/: Cargo.toml
src/runner/src/: main.rs  system.rs
(+832 files in other folders)
