[package]
name = "client"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
colored = "1.9"
indicatif = "0.13"
lib_protocol = { path = "../../libs/protocol" }
prettytable-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
structopt = "0.3"
tokio = "=0.2.0-alpha.6"
tonic = "0.1.0-alpha.6"