[package]
name = "client"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "1.9"
indicatif = "0.13"
lib_interop = { path = "../../libs/interop" }
lib_ui = { path = "../../libs/ui" }
prettytable-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.0-beta.1"