[package]
name = "controller"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
bimap = "0.4"
chrono = "0.4"
colored = "1.9"
lib_actor = { path = "../../libs/actor" }
lib_compiler = { path = "../../libs/compiler" }
lib_log = { path = "../../libs/log" }
lib_interop = { path = "../../libs/interop" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.0-beta.1"