[package]
name = "controller"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bimap = "0.4"
chrono = "0.4"
colored = "1.9"
derivative = "1.0"
hyper = "0.13"
lib_actor = { path = "../../libs/actor" }
lib_compiler = { path = "../../libs/compiler" }
lib_interop = { path = "../../libs/interop" }
lib_log = { path = "../../libs/log" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.0-beta.1"
tower = "0.3"