[package]
name = "runner"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
closure = "0.2.0"
colored = "1.9"
futures-channel-preview = "0.3.0-alpha.19"
futures-util-preview = "0.3.0-alpha.19"
lib_actor = { path = "../../libs/actor" }
lib_log = { path = "../../libs/log" }
lib_protocol = { path = "../../libs/protocol" }
lib_sandbox = { path = "../../libs/sandbox" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
tokio = "=0.2.0-alpha.6"
tonic = "0.1.0-alpha.6"