[package]
name = "runner"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_toml = "0.8"
chrono = "0.4"
closure = "0.2"
colored = "1.9"
derivative = "1.0"
lib_actor = { path = "../../libs/actor" }
lib_interop = { path = "../../libs/interop" }
lib_log = { path = "../../libs/log" }
lib_sandbox = { path = "../../libs/sandbox" }
lib_ui = { path = "../../libs/ui" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
tonic = "0.1.0-beta.1"