[package]
name = "runner"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
closure = "0.2"
colored = "1.9"
derivative = "1.0"
lib_cargo_manifest = { path = "../../libs/cargo_manifest" }
lib_core_actor = { path = "../../libs/core_actor" }
lib_core_channel = { path = "../../libs/core_channel" }
lib_core_log = { path = "../../libs/core_log" }
lib_core_ui = { path = "../../libs/core_ui" }
lib_interop = { path = "../../libs/interop" }
lib_sandbox = { path = "../../libs/sandbox" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
