[package]
name = "lib_interop"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.4"
chrono = "0.4"
colored = "1.9"
log = "0.4"
prost = "0.6"
prost-derive = "0.6"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.1.1"