[package]
name = "lib_lxd"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lib_process = { path = "../process" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
env_logger = "0.7"
pretty_assertions = "0.6"
