[package]
name = "lib_protocol"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.1.0-beta.1"

[build-dependencies]
tonic-build = "0.1.0-beta.1"