[package]
name = "client"
version = "0.1.0"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
fern = "0.5"
lib_protocol = { path = "../lib_protocol" }
reqwest = "0.9"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
snafu = "0.6"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }